docs(dealer): 각 참여자에 대한 최종 수익 계산 기능 구현